          compiler flags.

        * Makefile.am, NEWS, configure.ac, ide-projects/Makefile.am,
          java/Makefile.am, java/vrml/Makefile.am,
          java/vrml/field/Makefile.am, java/vrml/node/Makefile.am,
          src/openvrml/OpenVRML/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/Makefile.am:  Merged changes from
          0.12.5 release.  (Better late than never.)

2002-12-18  Braden McDaniel  <braden@endoframe.com>

        * m4/Makefile.am, m4/ftflib.m4:  Removed obsolete macro.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Apply font size to
          glyphs.

2002-12-18  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Shift ide-projects/Windows/VisualC6/tplib/antlr/Makefile.vc6
          to lib/antlr directory.

2002-12-17  Braden McDaniel  <braden@endoframe.com>

        * doc/Doxyfile, doc/Makefile.am, doc/conformance.doc,
          doc/conformance.html, doc/doxygen-footer, doc/doxygen-header,
          index.doc:  Documentation improvements.  Incorporated
          conformance test results into doxygen-generated docs.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/nodeptr.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp:  Doc-comment love.

        * openvrml.spec.in:  Removed reference to doc/conformance.html.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Doc-comment love.

2002-12-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Take out all Makefile.vc6 from ide-projects/Windows/VisualC6/*
          and keep these in respective source directory.

        * INSTALL-MSVC6.txt : Installation note for MSVC6.

        * ide-projects/Windows/VisualC6/Install: remove.

        * Update all Makefile.vc6 and *.dsp.

        * Apply patches #653113 and #653128.

2002-12-16  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.html: Update conformance results.
