@@ -12,4 +12,4 @@ endif
 
 noinst_HEADERS = ViewerGlut.h glutint.h
 
-EXTRA_DIST = lookat.cpp ViewerGlut.cpp
+EXTRA_DIST = lookat.cpp ViewerGlut.cpp Makefile.vc6
